@@ -132,6 +132,10 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
         list.add("--add-opens")
         list.add("java.base/java.lang=ALL-UNNAMED")
         list.add("--add-opens")
+        list.add("java.base/java.util.concurrent=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.util.concurrent.locks=ALL-UNNAMED")
+        list.add("--add-opens")
         list.add("java.base/java.util=ALL-UNNAMED")
         list.add("--add-opens")
         list.add("java.base/java.time=ALL-UNNAMED")
